# swagger.yaml
@@ -9,6 +9,20 @@ paths:
           description: ""
       tags:
         - App
+  /dashboard/metrics:
+    get:
+      operationId: DashboardController_getMetrics
+      parameters:
+        - name: companyId
+          required: true
+          in: query
+          schema:
+            type: string
+      responses:
+        "200":
+          description: ""
+      tags:
+        - Dashboard
   /auth/login:
     post:
       operationId: AuthController_login
@@ -158,6 +172,75 @@ paths:
         "200":
           description: ""
       tags: *a3
+  /access-control/roles:
+    get:
+      operationId: AccessControlController_findAllRoles
+      parameters:
+        - name: companyId
+          required: true
+          in: query
+          schema:
+            type: string
+      responses:
+        "200":
+          description: ""
+      tags: &a4
+        - AccessControl
+    post:
+      operationId: AccessControlController_createRole
+      parameters: []
+      responses:
+        "201":
+          description: ""
+      tags: *a4
+  /access-control/roles/{id}:
+    get:
+      operationId: AccessControlController_findOneRole
+      parameters:
+        - name: id
+          required: true
+          in: path
+          schema:
+            type: string
+      responses:
+        "200":
+          description: ""
+      tags: *a4
+    put:
+      operationId: AccessControlController_updateRole
+      parameters:
+        - name: id
+          required: true
+          in: path
+          schema:
+            type: string
+      responses:
+        "200":
+          description: ""
+      tags: *a4
+  /access-control/permissions:
+    get:
+      operationId: AccessControlController_findAllPermissions
+      parameters: []
+      responses:
+        "200":
+          description: ""
+      tags: *a4
+    post:
+      operationId: AccessControlController_createPermission
+      parameters: []
+      responses:
+        "201":
+          description: ""
+      tags: *a4
+  /access-control/seed:
+    post:
+      operationId: AccessControlController_seed
+      parameters: []
+      responses:
+        "201":
+          description: ""
+      tags: *a4
   /employees:
     post:
       operationId: EmployeeController_create
@@ -171,7 +254,7 @@ paths:
       responses:
         "201":
           description: ""
-      tags: &a4
+      tags: &a5
         - Employee
     get:
       operationId: EmployeeController_findAll
@@ -179,7 +262,7 @@ paths:
       responses:
         "200":
           description: ""
-      tags: *a4
+      tags: *a5
   /employees/fix-roles:
     post:
       operationId: EmployeeController_fixRoles
@@ -187,7 +270,7 @@ paths:
       responses:
         "201":
           description: ""
-      tags: *a4
+      tags: *a5
   /employees/stats/count:
     get:
       operationId: EmployeeController_getCount
@@ -200,7 +283,7 @@ paths:
       responses:
         "200":
           description: ""
-      tags: *a4
+      tags: *a5
   /employees/{id}:
     get:
       operationId: EmployeeController_findOne
@@ -213,7 +296,7 @@ paths:
       responses:
         "200":
           description: ""
-      tags: *a4
+      tags: *a5
     put:
       operationId: EmployeeController_update
       parameters:
@@ -231,7 +314,7 @@ paths:
       responses:
         "200":
           description: ""
-      tags: *a4
+      tags: *a5
     delete:
       operationId: EmployeeController_remove
       parameters:
@@ -243,7 +326,7 @@ paths:
       responses:
         "200":
           description: ""
-      tags: *a4
+      tags: *a5
   /attendance/check-in:
     post:
       operationId: AttendanceController_checkIn
@@ -257,7 +340,7 @@ paths:
       responses:
         "201":
           description: ""
-      tags: &a5
+      tags: &a6
         - Attendance
   /attendance/bulk-check-in:
     post:
@@ -272,7 +355,7 @@ paths:
       responses:
         "201":
           description: ""
-      tags: *a5
+      tags: *a6
   /attendance/check-out:
     post:
       operationId: AttendanceController_checkOut
@@ -286,7 +369,7 @@ paths:
       responses:
         "201":
           description: ""
-      tags: *a5
+      tags: *a6
   /attendance:
     post:
       operationId: AttendanceController_create
@@ -300,14 +383,14 @@ paths:
       responses:
         "201":
           description: ""
-      tags: *a5
+      tags: *a6
     get:
       operationId: AttendanceController_findAll
       parameters: []
       responses:
         "200":
           description: ""
-      tags: *a5
+      tags: *a6
   /attendance/today/{employeeId}:
     get:
       operationId: AttendanceController_getTodayAttendance
@@ -320,7 +403,7 @@ paths:
       responses:
         "200":
           description: ""
-      tags: *a5
+      tags: *a6
   /attendance/analytics:
     get:
       operationId: AttendanceController_getAnalytics
@@ -328,7 +411,7 @@ paths:
       responses:
         "200":
           description: ""
-      tags: *a5
+      tags: *a6
   /attendance/{id}:
     get:
       operationId: AttendanceController_findOne
@@ -341,7 +424,7 @@ paths:
       responses:
         "200":
           description: ""
-      tags: *a5
+      tags: *a6
   /leaves:
     post:
       operationId: LeavesController_create
@@ -355,7 +438,7 @@ paths:
       responses:
         "201":
           description: ""
-      tags: &a6
+      tags: &a7
         - Leaves
     get:
       operationId: LeavesController_findAll
@@ -363,7 +446,7 @@ paths:
       responses:
         "200":
           description: ""
-      tags: *a6
+      tags: *a7
   /leaves/{id}:
     get:
       operationId: LeavesController_findOne
@@ -376,7 +459,7 @@ paths:
       responses:
         "200":
           description: ""
-      tags: *a6
+      tags: *a7
   /leaves/{id}/status:
     patch:
       operationId: LeavesController_updateStatus
@@ -395,7 +478,251 @@ paths:
       responses:
         "200":
           description: ""
-      tags: *a6
+      tags: *a7
+  /designations:
+    post:
+      operationId: DesignationController_create
+      parameters: []
+      responses:
+        "201":
+          description: ""
+      tags: &a8
+        - Designation
+    get:
+      operationId: DesignationController_findAll
+      parameters:
+        - name: companyId
+          required: true
+          in: query
+          schema:
+            type: string
+      responses:
+        "200":
+          description: ""
+      tags: *a8
+  /designations/{id}:
+    get:
+      operationId: DesignationController_findOne
+      parameters:
+        - name: id
+          required: true
+          in: path
+          schema:
+            type: string
+      responses:
+        "200":
+          description: ""
+      tags: *a8
+    put:
+      operationId: DesignationController_update
+      parameters:
+        - name: id
+          required: true
+          in: path
+          schema:
+            type: string
+      responses:
+        "200":
+          description: ""
+      tags: *a8
+    delete:
+      operationId: DesignationController_remove
+      parameters:
+        - name: id
+          required: true
+          in: path
+          schema:
+            type: string
+      responses:
+        "200":
+          description: ""
+      tags: *a8
+  /projects/clients:
+    post:
+      operationId: ProjectsController_createClient
+      parameters: []
+      responses:
+        "201":
+          description: ""
+      tags: &a9
+        - Projects
+    get:
+      operationId: ProjectsController_findAllClients
+      parameters:
+        - name: companyId
+          required: true
+          in: query
+          schema:
+            type: string
+      responses:
+        "200":
+          description: ""
+      tags: *a9
+  /projects:
+    post:
+      operationId: ProjectsController_createProject
+      parameters: []
+      responses:
+        "201":
+          description: ""
+      tags: *a9
+    get:
+      operationId: ProjectsController_findAllProjects
+      parameters:
+        - name: companyId
+          required: true
+          in: query
+          schema:
+            type: string
+      responses:
+        "200":
+          description: ""
+      tags: *a9
+  /projects/tasks:
+    post:
+      operationId: ProjectsController_createTask
+      parameters: []
+      responses:
+        "201":
+          description: ""
+      tags: *a9
+    get:
+      operationId: ProjectsController_findAllTasks
+      parameters:
+        - name: projectId
+          required: true
+          in: query
+          schema:
+            type: string
+      responses:
+        "200":
+          description: ""
+      tags: *a9
+  /projects/tasks/company:
+    get:
+      operationId: ProjectsController_findAllTasksByCompany
+      parameters:
+        - name: companyId
+          required: true
+          in: query
+          schema:
+            type: string
+      responses:
+        "200":
+          description: ""
+      tags: *a9
+  /projects/tasks/{id}:
+    put:
+      operationId: ProjectsController_updateTask
+      parameters:
+        - name: id
+          required: true
+          in: path
+          schema:
+            type: string
+      responses:
+        "200":
+          description: ""
+      tags: *a9
+  /finance/payroll:
+    post:
+      operationId: FinanceController_createPayroll
+      parameters: []
+      responses:
+        "201":
+          description: ""
+      tags: &a10
+        - Finance
+    get:
+      operationId: FinanceController_findAllPayroll
+      parameters:
+        - name: companyId
+          required: true
+          in: query
+          schema:
+            type: string
+        - name: month
+          required: true
+          in: query
+          schema:
+            type: number
+        - name: year
+          required: true
+          in: query
+          schema:
+            type: number
+      responses:
+        "200":
+          description: ""
+      tags: *a10
+  /finance/expenses:
+    post:
+      operationId: FinanceController_createExpense
+      parameters: []
+      responses:
+        "201":
+          description: ""
+      tags: *a10
+    get:
+      operationId: FinanceController_findAllExpenses
+      parameters:
+        - name: companyId
+          required: true
+          in: query
+          schema:
+            type: string
+      responses:
+        "200":
+          description: ""
+      tags: *a10
+  /finance/summary:
+    get:
+      operationId: FinanceController_getSummary
+      parameters:
+        - name: companyId
+          required: true
+          in: query
+          schema:
+            type: string
+      responses:
+        "200":
+          description: ""
+      tags: *a10
+  /time-tracking/start:
+    post:
+      operationId: TimeTrackingController_start
+      parameters: []
+      responses:
+        "201":
+          description: ""
+      tags: &a11
+        - TimeTracking
+  /time-tracking/stop/{id}:
+    put:
+      operationId: TimeTrackingController_stop
+      parameters:
+        - name: id
+          required: true
+          in: path
+          schema:
+            type: string
+      responses:
+        "200":
+          description: ""
+      tags: *a11
+  /time-tracking:
+    get:
+      operationId: TimeTrackingController_findAll
+      parameters:
+        - name: employeeId
+          required: true
+          in: query
+          schema:
+            type: string
+      responses:
+        "200":
+          description: ""
+      tags: *a11
 info:
   title: Difmo CRM API
   description: The Difmo CRM API description
